# santino.test

./: .editorconfig  .env.example  .env.prod.example  .env.stage.example  .gitattributes  .gitignore  .tool-versions  LOADER_FIX_README.md  PAUSED.md  PROJECT_AUDIT.md  README.md  README_PROMPTS.md  README_RU_SPEECH.md  README_TRANSCRIBE.md  Santino-Crypto.code-workspace  SantinoRuComVer1(slide).html  copilot-web-app-master.ru.json  create_backup.ps1  deferred.css  index.html  index.html.modified.bak  install_ru_speech.ps1  install_transcribe.ps1  make_offline.ps1  netlify.toml  package-lock.json  package.json  requirements.txt  santino.code-workspace  serve.ps1  site.webmanifest  sw.js
.githooks/: pre-push  (+4 more)
crypto-bot/: .gitignore  Dockerfile  README.md  ROADMAP.md  crypto-bot.code-workspace  docker-compose.yml  online_smoke.out.txt  pyproject.toml
crypto-bot/.github/workflows/: build-docker.yml  paper-run.yml  run-paper.yml
crypto-bot/infra/deploy/: README.md  deploy.sh  server-bootstrap.sh
crypto-bot/infra/systemd/: crypto-bot.service
crypto-bot/scripts/: Create-VSCode-Workspace-Shortcut.ps1  Deploy-To-Oracle.ps1  check_ccxt_online.py  check_ccxt_online_sync.py  check_trade_doge.py  find_low_entry.py  generate_hourly_report.py  host_status.sh  monitor_grid.sh  online_smoke.py  open-crypto-bot-workspace.command  relay_ping.py  snapshot_grid.sh  win-backtest.ps1  win-check-exchange.ps1  win-ec2-status.ps1  win-paper.ps1  win-set-remote.ps1  win-setup.ps1
crypto-bot/scripts/macos/: bootstrap.sh  open-crypto-workspace.command
crypto-bot/tests/: test_crossover.py
(+596 files in other folders)
